# GSControl

./: CMakeLists.txt
apps/: CMakeLists.txt  control  control.cpp  default.conf  example  freq_tune  funcube.txt  iss.txt  rotor  rotor.cpp  sender  set_initial_freq.cpp  socket_sender.cpp  test.conf  test_tle.txt
inc/: gs_commands.h  gs_control.h  link.h  motor_angles.h  orbit_simulator.h  rotor_control.h  switch_control.h
lib/: libc_orbit_propagator.so.0.1  libexternal_control.0.1.dylib  libexternal_control.dylib  libexternal_control.so.0.1  libgs_control.0.1.dylib  libgs_control.dylib  libgs_control.so.0.1  libgsutils.0.1.dylib  libgsutils.dylib  liborbit_simulator.0.1.dylib  liborbit_simulator.dylib  liborbit_simulator.so.0.1  libutils.0.1.dylib
src/: CMakeLists.txt  gs_control.cpp
src/external_control/: CMakeLists.txt  rotor_control.cpp  socket_utils.c  switch_control.cpp
src/orbit_propagator/: CMakeLists.txt  link.cpp  motor_angles.cpp  orbit_simulator.cpp
